--- a/review.html
+++ b/review.html
@@ -35,7 +35,7 @@
             <div class="muted" id="prLastWhen">—</div>
             <div style="margin-top: 10px; font-weight: 900" id="prLastTitle">—</div>
             <div style="margin-top: 12px">
-              <a id="prLastLink" class="btn-white-outline" href="kurs-pl.html?level=A1&view=pro&flow=continuous">
+              <a id="prLastLink" class="btn-white-outline" href="course.html?level=A1&course=COURSE_PATH&flow=continuous">
                 Continuar
               </a>
             </div>
