--- a/lessonpage.html
+++ b/lessonpage.html
@@ -114,7 +114,7 @@
     </main>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/lessonpage-page.js?v=20260214j"></script>
+    <script type="module" src="assets/js/pages/lessonpage-page.js?v=20260214m"></script>
   </body>
 </html>
 
