--- a/versions.html
+++ b/versions.html
@@ -13,15 +13,13 @@
     <main class="page">
       <div class="container">
         <section class="card">
-          <h1 class="sectionTitle" style="margin-top: 0">Versions</h1>
-          <div class="subtitle" id="versionsMeta">Cargando...</div>
           <div class="metaRow" style="margin-top: 12px; gap: 8px; flex-wrap: wrap">
             <a class="btn-white-outline" id="btnVersionsLesson" href="lesson.html">Lección</a>
             <a class="btn-white-outline" id="btnVersionsFlashcards" href="flashcards.html">Fichas</a>
             <a class="btn-white-outline" id="btnVersionsMinitest" href="minitest.html">Mini test</a>
             <a class="btn-white-outline" id="btnVersionsTopic" href="lessonpage.html">Tema</a>
           </div>
-          <div class="subtitle" style="margin-top: 14px">
+          <div class="subtitle" id="versionsMeta" style="margin-top: 14px">
             Aquí añadiremos ejercicios por versiones.
           </div>
         </section>
