--- a/course.html
+++ b/course.html
@@ -110,7 +110,7 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/course-page.js?v=20260214i"></script>
+    <script type="module" src="assets/js/pages/course-page.js?v=20260215a"></script>
   </body>
 </html>
 
