--- a/espanel.html
+++ b/espanel.html
@@ -370,7 +370,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260214z"></script>
+    <script type="module" src="assets/js/pages/panel-page.js?v=20260215a"></script>
   </body>
 </html>
 
