--- a/ejercicio.html
+++ b/ejercicio.html
@@ -287,7 +287,7 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260214z"></script>
+    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260215e"></script>
   </body>
 </html>
 
