--- a/flashcards.html
+++ b/flashcards.html
@@ -77,7 +77,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/flashcards-page.js"></script>
+    <script type="module" src="assets/js/pages/flashcards-page.js?v=20260215b"></script>
   </body>
 </html>
 
