Fix sync: drop generated JSON artifacts from commit and keep app updates

--- a/espanel.html
+++ b/espanel.html
@@ -27,10 +27,10 @@
                 </div>
                 <div>
                   <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
-                    Ã‚Â¡Buenas!
+                    ¡Buenas!
                   </h1>
                   <div class="muted" id="panelSubtitle" style="margin-top: 6px">
-                    AquÃƒÂ­ tienes tu libreta!<br />Ã‚Â¡QuÃƒÂ© chimba verte!
+                    Aquí tienes tu libreta!<br />¡Qué chimba verte!
                   </div>
                   <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
                     <button class="btn-white-outline" id="btnAvatarUpload" type="button">
@@ -52,7 +52,7 @@
                 <span
                   ><b id="userEmail">...</b>
                   <span id="adminBadge" style="margin-left: 10px"
-                    >(admin: Ã¢â‚¬â€)</span
+                    >(admin: —)</span
                   ></span
                 >
 
@@ -199,7 +199,7 @@
             <div class="panelGrid">
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <div id="metaLevel" class="muted">Ã¢â‚¬â€</div>
+                <div id="metaLevel" class="muted">—</div>
                 <div style="margin-top: 12px">
                   <label class="muted" style="font-weight: 900">Title</label>
                   <input id="metaTitle" type="text" />
@@ -212,7 +212,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  BotÃƒÂ³n / Tile
+                  Botón / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -302,7 +302,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  BotÃƒÂ³n / Tile
+                  Botón / Tile
                 </div>
                 <div class="metaRow">
                   <input
