--- a/login.html
+++ b/login.html
@@ -132,9 +132,9 @@
             </p>
             <div class="stats" style="margin-top: 16px"></div>
             <div class="quick-links">
-              <a class="btn-white-outline" href="Programa.html">Programa</a>
-              <a class="btn-white-outline" href="Ebooks.html">E-books</a>
-              <a class="btn-white-outline" href="Contacto.html">Contacto</a>
+              <a class="btn-white-outline" href="services.html#planes">Programa</a>
+              <a class="btn-white-outline" href="services.html#ebooks">E-books</a>
+              <a class="btn-white-outline" href="index.html#contact">Contacto</a>
             </div>
           </div>
           <div class="form-card">
@@ -247,8 +247,8 @@
             <div id="message" class="msg"></div>
             <div class="hint">
               Al registrarte, aceptas nuestros
-              <a href="TOS.html" target="_blank">Términos de Servicio</a> y
-              <a href="Privacy.html" target="_blank">Política de Privacidad</a>
+              <a href="regulamin.html" target="_blank">Términos de Servicio</a> y
+              <a href="polityka-prywatnosci.html" target="_blank">Política de Privacidad</a>
             </div>
           </div>
         </div>
@@ -258,8 +258,3 @@
     <script type="module" src="assets/js/auth.js"></script>
   </body>
 </html>
-
-
-
-
-
