--- a/notificaciones.html
+++ b/notificaciones.html
@@ -34,7 +34,7 @@
             <div class="sectionTitle" style="margin-top: 0">Actividad reciente</div>
             <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
               <button class="btn-white-outline" id="btnNotifMarkRead" type="button">
-                Marcar todo como leÃ­do
+                Marcar todo como leído
               </button>
             </div>
           </div>
@@ -44,7 +44,7 @@
 
           <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
             <button class="btn-white-outline" id="btnNotifMore" type="button" hidden>
-              Cargar mÃ¡s
+              Cargar más
             </button>
             <a class="btn-yellow" href="espanel.html#notificaciones">Abrir en Libreta</a>
           </div>
