--- a/versions.html
+++ b/versions.html
@@ -22,11 +22,15 @@
           <div class="subtitle" id="versionsMeta" style="margin-top: 14px">
             Aquí añadiremos ejercicios por versiones.
           </div>
+          <div id="versionsBody" style="margin-top: 12px"></div>
+          <div class="subtitle" id="versionsEmpty" style="margin-top: 12px; display: none">
+            No hay ejercicios para este filtro.
+          </div>
         </section>
       </div>
     </main>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/versions-page.js?v=20260215a"></script>
+    <script type="module" src="assets/js/pages/versions-page.js?v=20260218a"></script>
   </body>
 </html>
