--- a/import/import-courses.html
+++ b/import/import-courses.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
     <style>
       body {
         margin: 0;
@@ -131,7 +131,7 @@
           display: inline-block;
           margin-bottom: 14px;
         "
-        href="esadmin.html"
+        href="../esadmin.html"
         >← Volver a Admin</a
       >
 
@@ -588,5 +588,4 @@ Emociones y estado de ánimo</textarea
     </script>
   </body>
 </html>
-
 
