--- a/notificaciones.html
+++ b/notificaciones.html
@@ -15,28 +15,28 @@
   <body data-page="notificaciones">
     <div id="appHeader"></div>
 
-    <main class="page">
+    <main class="page notifications-page">
       <div class="container">
-        <section class="heroBanner">
-          <div class="heroTitleRow">
-            <div class="heroIcon">&#128276;</div>
+        <section class="card notifications-card">
+          <div class="notifications-head">
             <div>
-              <h1 class="glow-text" style="margin: 0">Notificaciones</h1>
-              <div class="subtitle" style="margin-top: 6px">
-                Avisos de cursos, mensajes y recordatorios.
+              <h1 class="glow-text notifications-title">Notificaciones</h1>
+              <div class="subtitle notifications-subtitle">
+                Avisos importantes y novedades de tu cuenta.
               </div>
             </div>
-          </div>
-        </section>
-
-        <section class="card" style="margin-top: 12px">
-          <div class="metaRow" style="margin-top: 0; justify-content: space-between; gap: 10px">
-            <div class="sectionTitle" style="margin-top: 0">Actividad reciente</div>
             <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
               <button class="btn-white-outline" id="btnNotifMarkRead" type="button">
                 Marcar todo como leído
               </button>
             </div>
+          </div>
+
+          <div class="notifications-filters">
+            <button class="messages-filter is-active" id="btnNotifFilterUnread" type="button">
+              No leídas
+            </button>
+            <button class="messages-filter" id="btnNotifFilterAll" type="button">Todas</button>
           </div>
 
           <div class="muted" id="notifHint">Cargando...</div>
@@ -55,6 +55,3 @@
     <script type="module" src="assets/js/pages/notificaciones-page.js"></script>
   </body>
 </html>
-
-
-
